# CNC

./: .gitignore  CMakeLists.txt  README.md  env.bat  env.cmd  export.bat
client/: CMakeLists.txt
cmake/Modules/: FindOpenCASCADE.cmake
controller/: CMakeLists.txt
controller/include/: global.h  limits.h  stepmotor.h
controller/src/: gcode_exec.c  limits.c  stepmotor.c
core/: CMakeLists.txt
core/include/: Arrays.h  Event.h  Format.h  Geometry.h  NonCopyable.h  Octree.h  Part.h  STLImporter.h  System.h  TaskManager.h  Vector3.h  Vectors.h  rs232_interface.h
core/src/: Event.cpp  Geometry.cpp  Octree.cpp  Part.cpp  STLImporter.cpp  TaskManager.cpp  Vector3.cpp  rs232_interface.c
deprecated/e3d/: CMakeLists.txt  e3d-fill.c  e3d-gcode.c  e3d-svg.c  err.c  err.h  poly.c  poly.h
deprecated/e3d/popt/include/: poptdll.h  poptint.h
deprecated/e3d/popt/src/: poptconfig.c  popthelp.c  poptparse.c
deprecated/heeksart/: ArtConfig.h  HeeksArt.h  HeeksArt.vcxproj  Interface.cpp  Matrix.h  Mesh.cpp  MeshEdge.cpp  MeshFace.cpp  MeshPosition.cpp  MeshVertex.cpp  MeshVertex.h  Point.h  dllmain.cpp  stdafx.h
deprecated/heekspython/: autoexec.py
development/: CMakeLists.txt
development/core/: CMakeLists.txt
development/core/include/: Array2.h  Geometry.h  Global.h  Locker.h  NumTraits.h  Octree.inl  STLImporter.h  SharedData.h  Singleton.h  SmartPtr.h  Task.h  Vector3.h
development/core/src/: Locker.cpp  STLImporter.cpp  Task.cpp
e3d/: CMakeLists.txt  e3d-common.c  e3d-slice.c  e3d-stl.c  e3d.c  err.c
examples/test1/: CMakeLists.txt  test1.cpp
heeksart/: HeeksArt.cpp  HeeksArt.sln  HeeksArtTypes.h  Interface.h  Line.h  Matrix.cpp  Mesh.h  MeshChild.cpp  MeshChild.h  MeshDialog.cpp  MeshDialog.h  MeshEdge.h  MeshFace.h  MeshPosition.h  Plane.cpp  Plane.h
heekscad/: CMakeLists.txt  HeeksCAD installer.iss  HeeksCAD.po  Mouse.py  autotranslate.bat  export.bat  pretranslation.bat  test.py
heekscad/interface/: CMakeLists.txt  DoubleInput.h  Geom.cpp  Geom.h  HeeksCADInterface.cpp  HeeksObj.cpp  IdNamedObjList.h  NurbSurfaceParams.h  PictureFrame.cpp  PictureFrame.h  Plugin.h
heekscad/src/: AutoSave.cpp  CMakeLists.txt  ConversionTools.cpp  ConversionTools.h  Cuboid.h  CuboidDlg.cpp  CuboidDlg.h  CxfFont.cpp  CxfFont.h  Cylinder.h  DigitizeMode.cpp  DigitizedPoint.cpp  DimensionDrawing.cpp  DimensionDrawing.h  Drawing.cpp  Drawing.h  Edge.cpp  Face.cpp  Face.h  FaceTools.cpp  FastCurves.cpp  GraphicsCanvas.cpp  GraphicsCanvas.h  Group.cpp  HAngularDimension.cpp  HAngularDimension.h  HArc.cpp  HArc.h  HCircle.cpp  HDimension.cpp  HDxf.cpp  HDxf.h  HGear.cpp  HSpline.cpp  HXml.cpp  HeeksCAD VC2013.sln  HeeksCAD VC2013.vcxproj  HeeksCAD VC2013.vcxproj.filters  HeeksCAD.cpp  HeeksCAD.h  (+54 more)
heekscad/tinyxml/: CMakeLists.txt
heekscad/translations/it/: HeeksCAD.po
heekscnc/: HeeksCNC 1.0 installer.iss  HeeksCNC 1.2 installer.iss  default.tooltable  export.bat  nc_read.bat  roughing_funcs.py
heekscnc/nc/: dynapath.py  hxml_writer.py  machines.xml  nc_read.py
heekscnc/pycnc/: Cad.py  HeeksCNC.py  NoCad.bat  NoCad.py  Object.py  Profile.py  Tool.py  Tools.py
heekscnc/src/: CMakeLists.txt  CNCConfig.h  CTool.cpp  CTool.h  CToolDlg.cpp  DepthOp.cpp  DepthOp.h  DepthOpDlg.h  DrillingDlg.cpp  DrillingDlg.h  DropCutter.cpp  DropCutter.h  Excellon.h  HeeksCNC VC2008.sln  HeeksCNC VC2013.sln  HeeksCNC VC2013.vcproj  HeeksCNC.cpp  HeeksCNC.sln  HeeksCNC.vcxproj  HeeksCNCInterface.h  Makefile.old  NCCode.h  Op.cpp  Op.h  OpDlg.h  Operations.cpp  OutputCanvas.cpp  OutputCanvas.h  Pattern.h  PatternDlg.cpp  PocketDlg.cpp  ProfileDlg.h  ProgramDlg.cpp  PythonStuff.cpp  PythonStuff.h  ScriptOp.h  ScriptOpDlg.cpp  ScriptOpDlg.h  Simulate.cpp  Simulate.h  (+18 more)
heekspython/src/: ConsoleCanvas.cpp  HeeksPython.vcxproj  HeeksPython.vcxproj.filters  PythonConfig.h  vc_retro.py
libactp/PythonLib/: actp.vcxproj  actp.vcxproj.filters
libarea/: Arc.cpp  Arc.h  Area.cpp  Area.h  AreaBoolean.cpp  AreaClipper.cpp  AreaOrderer.h  AreaPocket.cpp  CMakeLists.txt  Circle.cpp  Curve.cpp  Curve.h  area.sln  area.vcxproj  area.vcxproj.filters  clipper.cpp  clipper.hpp  clipper.sln  clipper.vcxproj  clipper.vcxproj.filters  dxf.cpp  dxf.h  kbool.vcproj
libarea/area/: CMakeLists.txt
libarea/clipper/: CMakeLists.txt
libarea/kbool/include/: graph.h  lpoint.h  node.h  record.h
libarea/kbool/src/: booleng.cpp  graph.cpp  graphlst.cpp  line.cpp  link.cpp  lpoint.cpp  node.cpp  record.cpp  scanbeam.cpp
libarea/kurve/: Construction.cpp  Matrix.cpp  kurve.cpp
libarea/pocket/: PocketParams.h  ReadMe.txt  TextPath.cpp  TextPath.h  pocket.cpp  pocket.sln  stdafx.cpp  stdafx.h
model/: Perch.fbm  Perch.heeks  Perch1.fbm  cnc-mill.FCStd  part1.heeks
old/heekscad/: GraphicsCanvas.py
old/heekscnc/: HeeksCNC installer.iss  actp_funcs.py  default_tools.txt  turning.py
old/libarea/: Arc.cpp  Area.cpp  AreaBoolean.cpp  Box2D.h  Circle.h  Curve.cpp  Point.h  PythonStuff.cpp  area clipper.sln  area clipper.vcproj  area clipper.vcxproj  area.sln  area.vcproj  area.vcxproj  clipper.cpp  kbool.sdf  (+3 more)
opencamlib/: CMakeLists.txt
opencamlib/src/: CMakeLists.txt  version_string.hpp
opencamlib/src/attic/: makefile_old
opencamlib/src/common/: numeric.cpp
opencamlib/src/cutters/: millingcutter.cpp
opencamlib/src/dropcutter/: batchdropcutter.cpp
opencamlib/src/geo/: arc.cpp  bbox.cpp  ccpoint.cpp  line.cpp  point.cpp  triangle.cpp
voxelcut/: CMakeLists.txt  ControlButton.cpp  ControlButton.h  ControlView.cpp  MouseEvent.h  PythonStuff.cpp  PythonStuff.h  SolidView.cpp  SolidView.h  Tool.h  VCApp.cpp  VCApp.h  VCFrame.cpp  VCFrame.h  VoxelCut installation maker.iss  VoxelCut.cpp  VoxelCut.sln  VoxelCut.vcproj  VoxelCut.vcxproj  bmArrowXMinusBlue.xpm  bmArrowXMinusGreen.xpm  bmArrowXPlusBlue.xpm  bmArrowXPlusGreen.xpm  bmArrowYMinusBlue.xpm  bmArrowYMinusGreen.xpm  bmArrowYPlusBlue.xpm  bmArrowYPlusGreen.xpm  bmArrowZMinusBlue.xpm  bmArrowZMinusGreen.xpm  bmArrowZPlusBlue.xpm  bmArrowZPlusGreen.xpm  gr105.tap  kplib.cpp  sculptapp.cpp  sculptapp.h  sysmain.h  test.bat  test.tap  v5.asm  voxlap5.cpp  (+2 more)
(+202 files in other folders)
