cmake_minimum_required(VERSION 2.8)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

set( CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "" FORCE)

project( Heeks )

MESSAGE(STATUS "OpenCASCADE root dir is: " $ENV{CASROOT})

MESSAGE(STATUS "MSVC_VERSION is: " ${MSVC_VERSION})

find_package( PythonLibs REQUIRED )
find_package( Boost REQUIRED)


set( OpenCASCADE_INCLUDE_DIR $ENV{CASROOT}/inc )

if (MSVC_VERSION EQUAL "1800")
  set( MSVER_STR "vc12" )
else (MSVC_VERSION EQUAL "1800")
  if (MSVC_VERSION EQUAL 1900)
    set( MSVER_STR "vc14" )
  else (MSVC_VERSION EQUAL "1900")
    error( "Visual Studio Version ${MSVC_VERSION} is not supported!!!" )
  endif (MSVC_VERSION EQUAL "1900")
endif (MSVC_VERSION EQUAL "1800")


set( OpenCASCADE_LIBRARY_DIR $ENV{CASROOT}/win32/${MSVER_STR}/lib )
set( libarea_INCLUDE_DIRS ${CMAKE_SOURCE_DIR}/libarea )

set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/Clipper )
set( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib/Clipper )
set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib/Clipper )
set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/bin/Clipper )
set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/bin/Clipper )
set( CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/li/Clipperb )
set( CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/li/Clipperb )
set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/lib/Clipperc )
set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/lib/Clipper )

add_subdirectory( libarea/clipper )

set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin )
set( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib )
set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib )
set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/bin )
set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/bin )
set( CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/lib )
set( CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/lib )
set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/lib )
set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/lib )

add_subdirectory( libarea )
add_subdirectory( libarea/area )

SET_PROPERTY(TARGET clipper PROPERTY FOLDER "Common/Area")
SET_PROPERTY(TARGET area PROPERTY FOLDER "Common/Area")
SET_PROPERTY(TARGET libarea PROPERTY FOLDER "Common/Area")

add_subdirectory( voxelcut )
add_subdirectory( opencamlib )

SET_PROPERTY(TARGET voxelcut PROPERTY FOLDER "Common")
SET_PROPERTY(TARGET ocl PROPERTY FOLDER "Common")

add_subdirectory( heekscad/tinyxml )
add_subdirectory( heekscad/interface )
add_subdirectory( heekscad/src )

SET_PROPERTY(TARGET heekstinyxml PROPERTY FOLDER "Common/HeeksCAD")
SET_PROPERTY(TARGET heeksintf PROPERTY FOLDER "Common/HeeksCAD")
